--- a/index.html
+++ b/index.html
@@ -18,92 +18,118 @@
   <body>
     <!-- The Header -->
     <header>
-      <h1>Orgigami Design</h1>
-
       <nav>
-        <table class="navBar">
-          <tr>
-            <td><a href="#"></a>SNS 1</td>
-            <td><a href="#"></a>SNS 2</td>
-            <td><a href="#"></a>SNS 3</td>
-            <td><a href="#"></a>SNS 4</td>
-          </tr>
-        </table>
+        <li class="logo"><a href="#"></a>🍥 Origami Design</li>
+        <li><a href="#"></a>SNS 1</li>
+        <li><a href="#"></a>SNS 2</li>
+        <li><a href="#"></a>SNS 3</li>
+        <li><a href="#"></a>SNS 4</li>
+        <li><a href="#"></a>🕵🏻‍♂️</li>
       </nav>
+
+      <h1>Origami Instructions and Diagrams</h1>
+      <p>
+        Step by Step diagrams are probably the most popular and easiest to
+        follow way to show how to fold things out of paper. Trying to find good
+        origami instructions on the Internet can be a lot of work though. To
+        help your search we’ve put together the largest database of free origami
+        diagrams anywhere on the Internet.
+      </p>
+
+      <p>
+        You’ll also find a few free samples of diagrams from our new book as
+        well!
+      </p>
     </header>
 
     <!-- Main Content  -->
     <main>
-      <section>
-        <table>
-          <tr>
-            <!-- Origami 1 -->
-            <td>
-              <a href="https://origami.me/chameleon/"
-                ><img
-                  src="./app/assets/chameleon.png"
-                  alt="camelian"
-                  class="aniImage"
-              /></a>
+      <p>
+        Everyone Can Learn Origami is a book specifically for beginners who want
+        to learn how to make origami.
+      </p>
 
-              <ul>
-                <li>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                  Nam finibus eleifend nulla ac commodo. Vivamus fringilla, ex
-                  at gravida dictum, ante lacus ultricies ex, nec fringilla eros
-                  lorem a sapien.
-                </li>
-                <li>Proin id hendrerit nisl.</li>
-              </ul>
-            </td>
+      <p>
+        In this book you’ll learn all the major folds and techniques and then
+        practice them by folding 77 different traditional models. As you fold
+        your way through the models in this book your skills will improve and
+        you’ll be able to fold more and more complex designs.
+      </p>
 
-            <!-- Origami 2 -->
-            <td>
-              <a href="https://origami.me/chameleon/"
-                ><img
-                  src="./app/assets/camel.png"
-                  alt="camelian"
-                  class="aniImage"
-              /></a>
+      <p class="logo">
+        We’ve posted diagrams for 4 of the models in the book on our site below
+        for you to check out:
+      </p>
+      <section class="flex-container">
+        <!-- Origami 1 -->
+        <article class="flex-item">
+          <a href="https://origami.me/chameleon/"
+            ><img src="./app/assets/camel.png" alt="camelian" class="aniImage"
+          /></a>
+          <ul>
+            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+            <li>
+              Nam finibus eleifend nulla ac commodo. Vivamus fringilla, ex at
+              gravida dictum, ante lacus ultricies ex, nec fringilla eros lorem
+              a sapien.
+            </li>
+            <li>Proin id hendrerit nisl.</li>
+          </ul>
+        </article>
 
-              <ul>
-                <li>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                  Nam finibus eleifend nulla ac commodo. Vivamus fringilla, ex
-                  at gravida dictum, ante lacus ultricies ex, nec fringilla eros
-                  lorem a sapien.
-                </li>
-                <li>Proin id hendrerit nisl.</li>
-              </ul>
-            </td>
+        <!-- Origami 2 -->
+        <article class="flex-item">
+          <a href="https://origami.me/chameleon/"
+            ><img
+              src="./app/assets/chameleon.png"
+              alt="camelian"
+              class="aniImage"
+          /></a>
+          <ul>
+            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+            <li>
+              Nam finibus eleifend nulla ac commodo. Vivamus fringilla, ex at
+              gravida dictum, ante lacus ultricies ex, nec fringilla eros lorem
+              a sapien.
+            </li>
+            <li>Proin id hendrerit nisl.</li>
+          </ul>
+        </article>
 
-            <!-- Origami 3  -->
-            <td>
-              <a href="https://origami.me/chameleon/"
-                ><img
-                  src="./app/assets/teddy.png"
-                  alt="camelian"
-                  class="aniImage"
-              /></a>
+        <!-- Origami 3  -->
+        <article class="flex-item">
+          <a href="https://origami.me/chameleon/"
+            ><img src="./app/assets/teddy.png" alt="camelian" class="aniImage"
+          /></a>
+          <ul>
+            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+            <li>
+              Nam finibus eleifend nulla ac commodo. Vivamus fringilla, ex at
+              gravida dictum, ante lacus ultricies ex, nec fringilla eros lorem
+              a sapien.
+            </li>
+            <li>Proin id hendrerit nisl.</li>
+          </ul>
+        </article>
 
-              <ul>
-                <li>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                  Nam finibus eleifend nulla ac commodo. Vivamus fringilla, ex
-                  at gravida dictum, ante lacus ultricies ex, nec fringilla eros
-                  lorem a sapien.
-                </li>
-                <li>Proin id hendrerit nisl.</li>
-              </ul>
-            </td>
-          </tr>
-        </table>
+        <!-- Origami 4  -->
+        <article class="flex-item">
+          <a href="https://origami.me/chameleon/"
+            ><img
+              src="./app/assets/rsz_cursor.png"
+              alt="camelian"
+              class="aniImage"
+          /></a>
+          <ul>
+            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+            <li>
+              Nam finibus eleifend nulla ac commodo. Vivamus fringilla, ex at
+              gravida dictum, ante lacus ultricies ex, nec fringilla eros lorem
+              a sapien.
+            </li>
+            <li>Proin id hendrerit nisl.</li>
+          </ul>
+        </article>
       </section>
     </main>
 
